<resources>
    <string name="app_name">College</string>
    <string name="college_app">College App</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_roll_no">Enter Roll No</string>
    <string name="phone_no">Phone No</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="spinner_title">spinner_title</string>
    <string name="txtName">Name Name</string>
    <string name="msc_it2">MSc IT2</string>
    <string name="profile">profile</string>
    <string name="notes">Notes</string>
    <string name="assignments">assignment</string>
    <string name="book">book</string>
    <string name="assignment">assignment</string>
    <string name="chat">chat</string>
    <string name="time">time</string>
    <string name="practical">practical</string>
    <string name="Reg">ADD</string>
    <string name="remember">Remember Me</string>
    <string name="grpChats">chats</string>
    <string name="chat_bot">Chatbot</string>
    <string name="upload">Upload File</string>
    <string name="selectImage">Select Image</string>
    <string name="upload_event">Upload Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_dep">Event Description </string>
    <string name="filename">Enter File Name</string>
    <string name="select">Select File</string>

    <string name="mscIt">Msc It </string>
    <string name="mscIt1">Msc It Semester 1</string>
    <string name="mscIt2">Msc It Semester 2</string>
    <string name="bscIt1">Bsc It Semester 1</string>
    <string name="bscIt2">Bsc It Semester 2</string>
    <string name="bscIt3">Bsc It Semester 3</string>
    <string name="bscIt">Bsc It </string>
    <string name="sem1">Semester 1 </string>
    <string name="sem2">Semester 2 </string>
    <string name="sem3">Semester 3 </string>
    <string name="sem4">Semester 4 </string>
    <string name="sem5">Semester 5 </string>
    <string name="sem6">Semester 6 </string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="takeImage">Take Image</string>
    <string name="full_name">Full Name</string>
    <string name="roll_no">Roll Number</string>
    <string name="email">E-Mail</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="updatePassword">Update Password</string>
    <string name="stdAdd">Add Student</string>
    <string name="addComment">Add Comment</string>
    <string name="comments">Comments :</string>
    <string name="post">Post</string>
    <string name="stream">Stream</string>
    <string name="myClass">My Class</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="add_student">Add Student</string>
    <string name="tech_reg">Add Teacher</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="admin">Admin</string>
    <string name="typeMsg">Type a message</string>
    <string name="grpName">Enter Group Name</string>
    <string name="delete_event">Delete Event</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="view_teachers">View Teachers</string>
    <string name="view_students">view Students</string>
    <string name="edit">Edit</string>
    <string name="icon">icon</string>
    <string name="update">Update</string>
    <string name="delete_photo">Delete Profile Photo</string>
    <string name="create_new_todo">Create New TODO</string>
    <string name="add_title">Add Title</string>
    <string name="describe_todo">Describe TODO</string>
    <string name="timeline">Timeline</string>
    <string name="select_date_and_time">Select Date And Time</string>
    <string name="create_now">Create Now</string>
    <string name="class_todo">Class TODO</string>
    <string name="slash">/</string>
    <string name="feedback">Send Feedback</string>
    <string name="calender">calender</string>
    <string name="select_date">Select Date</string>
    <string name="send">send</string>
    <string name="group_chat">Group Chat</string>
    <string name="events">Events</string>
    <string name="website">Website</string>
    <string name="syllabus">Syllabus</string>
    <string name="practicals">Practicals</string>
    <string name="blackbook">Black Book</string>
    <string name="videoNotes">Video Notes</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="enter_name_or_roll_no">Enter Name or Roll No.</string>
    <string name="msc">MSc</string>
    <string name="information_technology">Information Technology</string>
    <string name="bsc">BSc</string>
    <string name="share_app">Share App</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="empty_list">Empty List</string>
    <string name="forget_password">Forgot Password? </string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="completed">Completed</string>
    <string name="notCompleted">Not Completed</string>
    <string name="all">All</string>
    <string name="search">Search</string>
    <string name="select_todo">Item Selected </string>
    <string name="select_attach">Attach File</string>
    <string name="select_video">Video</string>

    <string name="light_mode">Disable Dark Mode</string>
    <string name="night_mode">Enable Dark Mode</string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_title">Enter Title</string>
    <string name="cancel">Cancel</string>
    <string name="upload_video">Upload</string>

    <string-array name="Selected">
        <item>Delete TO-Do</item>
        <item>Completed TO-Do</item>
        <item>Not Completed TO-Do</item>
    </string-array>
    <string-array name="Selected_video">
        <item>Download</item>
        <item>Share</item>
        <item>Delete</item>
    </string-array>
    <string-array name="Selected_notes">
        <item>Download</item>
        <item>Share</item>
    </string-array>
    <string-array name="Selected_attach">
        <item>Select Image</item>
        <item>Select Document</item>
    </string-array>
</resources>
