<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event_expand">

    <androidx.cardview.widget.CardView
        android:id="@+id/event_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/event_expand_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/assignment"
                android:contentDescription="@string/selectImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_expand_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_title"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_expand_dep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_dep"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_expand_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/date"
                    android:textSize="14sp" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:text="@string/delete"
                    android:onClick="btnDeleteEvent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</ScrollView>