<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/video_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/video_url"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_title"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_toStartOf="@+id/upload_video"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_url"
        android:layout_marginTop="10dp"
        android:text="@string/cancel" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_alignParentEnd="true"
        android:id="@+id/upload_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_url"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/upload_video" />

</RelativeLayout>