<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="project.msc.college.event_upload_event">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/tollbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/event_up_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:onClick="btn_image_view"
                android:scaleType="fitCenter"
                android:src="@drawable/add_image" />

            <EditText
                android:id="@+id/ed_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/event_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_event_dep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:gravity="top|start"
                android:hint="@string/event_dep"
                android:inputType="textMultiLine"

                android:lines="2"
                android:maxLines="10"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_takeImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="btnTakeImage"
                android:text="@string/takeImage"
                android:visibility="gone"
                app:icon="@android:drawable/ic_menu_camera"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="btnSelectImage"
                android:text="@string/selectImage"
                android:textColor="@color/white"
                app:icon="@android:drawable/ic_menu_gallery"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="btn_uploadEvents"
                android:text="@string/upload_event"
                android:textColor="@color/white"
                app:icon="@drawable/ic_file_upload_black_24dp"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>